Adjust page footer
Correct copyright holder

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Bible Aquifer. Open Biblical Resources.</p>
-            <p><a href="https://github.com/BibleAquifer" target="_blank">GitHub Organization</a> | <a href="https://github.com/BibleAquifer/docs" target="_blank">Documentation</a></p>
+            <p>&copy; 2025 Mission Mutual. Open Biblical Resources.</p>
+            <p><a href="https://github.com/BibleAquifer" target="_blank">GitHub Org</a> | <a href="https://github.com/BibleAquifer/docs" target="_blank">Documentation</a></p>
         </div>
     </footer>
 </body>
