Better adaptation notice support

--- a/catalog.html
+++ b/catalog.html
@@ -4133,7 +4133,7 @@ function displayLanguageMetadata() {
         
         // Add adaptation notice if available
         if (langData.citation.adaptation_notice) {
-            html += `<p class="adaptation-notice">${langData.citation.adaptation_notice}</p>`;
+            html += `<div class="adaptation-notice">${langData.citation.adaptation_notice}</div>`;
         }
         
         html += '<hr style="margin: 1.5rem 0;">';
