--- a/catalog.html
+++ b/catalog.html
@@ -2652,6 +2652,26 @@ const RESOURCES_DATA = {
     "description": "Aquifer resource repository for UWTranslationQuestions, containing resource-level metadata, article-level metadata, and content files in JSON and Markdown formats.",
     "url": "https://github.com/BibleAquifer/UWTranslationQuestions",
     "languages": {
+      "arb": {
+        "code": "arb",
+        "name": "Arabic",
+        "title": "Translation Questions (unfoldingWord)",
+        "version": "1.0.0",
+        "resource_type": "Comprehension Testing",
+        "content_type": "Html",
+        "language": "arb",
+        "citation": {
+          "title": "unfoldingWord\u00ae Translation Questions",
+          "copyright_dates": "2022",
+          "copyright_holder": "unfoldingWord",
+          "license_name": null,
+          "adaptation_notice": ""
+        },
+        "has_json": true,
+        "has_md": true,
+        "has_pdf": false,
+        "has_docx": false
+      },
       "eng": {
         "code": "eng",
         "name": "English",
@@ -2712,6 +2732,46 @@ const RESOURCES_DATA = {
         "has_pdf": true,
         "has_docx": true
       },
+      "ind": {
+        "code": "ind",
+        "name": "Indonesian",
+        "title": "Translation Questions (unfoldingWord)",
+        "version": "1.0.0",
+        "resource_type": "Comprehension Testing",
+        "content_type": "Html",
+        "language": "ind",
+        "citation": {
+          "title": "unfoldingWord\u00ae Translation Questions",
+          "copyright_dates": "2022",
+          "copyright_holder": "unfoldingWord",
+          "license_name": null,
+          "adaptation_notice": ""
+        },
+        "has_json": true,
+        "has_md": true,
+        "has_pdf": true,
+        "has_docx": true
+      },
+      "nep": {
+        "code": "nep",
+        "name": "Nepali",
+        "title": "Translation Questions (unfoldingWord)",
+        "version": "1.0.0",
+        "resource_type": "Comprehension Testing",
+        "content_type": "Html",
+        "language": "nep",
+        "citation": {
+          "title": "unfoldingWord\u00ae Translation Questions",
+          "copyright_dates": "2022",
+          "copyright_holder": "unfoldingWord",
+          "license_name": null,
+          "adaptation_notice": ""
+        },
+        "has_json": true,
+        "has_md": true,
+        "has_pdf": true,
+        "has_docx": true
+      },
       "por": {
         "code": "por",
         "name": "Portuguese",
@@ -2720,6 +2780,26 @@ const RESOURCES_DATA = {
         "resource_type": "Comprehension Testing",
         "content_type": "Html",
         "language": "por",
+        "citation": {
+          "title": "unfoldingWord\u00ae Translation Questions",
+          "copyright_dates": "2022",
+          "copyright_holder": "unfoldingWord",
+          "license_name": null,
+          "adaptation_notice": ""
+        },
+        "has_json": true,
+        "has_md": true,
+        "has_pdf": true,
+        "has_docx": true
+      },
+      "zht": {
+        "code": "zht",
+        "name": "Chinese (Traditional)",
+        "title": "Translation Questions (unfoldingWord)",
+        "version": "1.0.0",
+        "resource_type": "Comprehension Testing",
+        "content_type": "Html",
+        "language": "zht",
         "citation": {
           "title": "unfoldingWord\u00ae Translation Questions",
           "copyright_dates": "2022",
