--- a/catalog.html
+++ b/catalog.html
@@ -2260,7 +2260,7 @@ const RESOURCES_DATA = {
         "code": "arb",
         "name": "Arabic",
         "title": "Translation Manual (unfoldingWord)",
-        "version": "1.0.0",
+        "version": "1.0.1",
         "resource_type": "Bible Translation Manual",
         "content_type": "Html",
         "language": "arb",
@@ -2273,14 +2273,14 @@ const RESOURCES_DATA = {
         },
         "has_json": true,
         "has_md": true,
-        "has_pdf": false,
-        "has_docx": false
+        "has_pdf": true,
+        "has_docx": true
       },
       "eng": {
         "code": "eng",
         "name": "English",
         "title": "Translation Manual (unfoldingWord)",
-        "version": "1.0.0",
+        "version": "1.0.1",
         "resource_type": "Bible Translation Manual",
         "content_type": "Html",
         "language": "eng",
@@ -2300,7 +2300,7 @@ const RESOURCES_DATA = {
         "code": "hin",
         "name": "Hindi",
         "title": "Translation Manual (unfoldingWord)",
-        "version": "1.0.0",
+        "version": "1.0.1",
         "resource_type": "Bible Translation Manual",
         "content_type": "Html",
         "language": "hin",
@@ -2320,7 +2320,7 @@ const RESOURCES_DATA = {
         "code": "ind",
         "name": "Indonesian",
         "title": "Translation Manual (unfoldingWord)",
-        "version": "1.0.0",
+        "version": "1.0.1",
         "resource_type": "Bible Translation Manual",
         "content_type": "Html",
         "language": "ind",
@@ -2340,7 +2340,7 @@ const RESOURCES_DATA = {
         "code": "nep",
         "name": "Nepali",
         "title": "Translation Manual (unfoldingWord)",
-        "version": "1.0.0",
+        "version": "1.0.1",
         "resource_type": "Bible Translation Manual",
         "content_type": "Html",
         "language": "nep",
@@ -2360,7 +2360,7 @@ const RESOURCES_DATA = {
         "code": "por",
         "name": "Portuguese",
         "title": "Translation Manual (unfoldingWord)",
-        "version": "1.0.0",
+        "version": "1.0.1",
         "resource_type": "Bible Translation Manual",
         "content_type": "Html",
         "language": "por",
@@ -2380,7 +2380,7 @@ const RESOURCES_DATA = {
         "code": "zht",
         "name": "Chinese (Traditional)",
         "title": "Translation Manual (unfoldingWord)",
-        "version": "1.0.0",
+        "version": "1.0.1",
         "resource_type": "Bible Translation Manual",
         "content_type": "Html",
         "language": "zht",
@@ -2393,8 +2393,8 @@ const RESOURCES_DATA = {
         },
         "has_json": true,
         "has_md": true,
-        "has_pdf": false,
-        "has_docx": false
+        "has_pdf": true,
+        "has_docx": true
       }
     },
     "title": "Translation Manual (unfoldingWord)"
@@ -2408,7 +2408,7 @@ const RESOURCES_DATA = {
         "code": "arb",
         "name": "Arabic",
         "title": "Translation Notes (unfoldingWord)",
-        "version": "1.0.0",
+        "version": "1.0.1",
         "resource_type": "Translation Guide",
         "content_type": "Html",
         "language": "arb",
@@ -2421,14 +2421,14 @@ const RESOURCES_DATA = {
         },
         "has_json": true,
         "has_md": true,
-        "has_pdf": false,
-        "has_docx": false
+        "has_pdf": true,
+        "has_docx": true
       },
       "eng": {
         "code": "eng",
         "name": "English",
         "title": "Translation Notes (unfoldingWord)",
-        "version": "1.0.0",
+        "version": "1.0.1",
         "resource_type": "Translation Guide",
         "content_type": "Html",
         "language": "eng",
@@ -2448,7 +2448,7 @@ const RESOURCES_DATA = {
         "code": "fra",
         "name": "French",
         "title": "Translation Notes (unfoldingWord)",
-        "version": "1.0.0",
+        "version": "1.0.1",
         "resource_type": "Translation Guide",
         "content_type": "Html",
         "language": "fra",
@@ -2468,7 +2468,7 @@ const RESOURCES_DATA = {
         "code": "hin",
         "name": "Hindi",
         "title": "Translation Notes (unfoldingWord)",
-        "version": "1.0.0",
+        "version": "1.0.1",
         "resource_type": "Translation Guide",
         "content_type": "Html",
         "language": "hin",
@@ -2488,7 +2488,7 @@ const RESOURCES_DATA = {
         "code": "ind",
         "name": "Indonesian",
         "title": "Translation Notes (unfoldingWord)",
-        "version": "1.0.0",
+        "version": "1.0.1",
         "resource_type": "Translation Guide",
         "content_type": "Html",
         "language": "ind",
@@ -2508,10 +2508,30 @@ const RESOURCES_DATA = {
         "code": "por",
         "name": "Portuguese",
         "title": "Translation Notes (unfoldingWord)",
-        "version": "1.0.0",
+        "version": "1.0.1",
         "resource_type": "Translation Guide",
         "content_type": "Html",
         "language": "por",
+        "citation": {
+          "title": "unfoldingWord\u00ae Translation Notes",
+          "copyright_dates": "2022",
+          "copyright_holder": "unfoldingWord",
+          "license_name": null,
+          "adaptation_notice": ""
+        },
+        "has_json": true,
+        "has_md": true,
+        "has_pdf": true,
+        "has_docx": true
+      },
+      "spa": {
+        "code": "spa",
+        "name": "Spanish",
+        "title": "Translation Notes (unfoldingWord)",
+        "version": "1.0.1",
+        "resource_type": "Translation Guide",
+        "content_type": "Html",
+        "language": "spa",
         "citation": {
           "title": "unfoldingWord\u00ae Translation Notes",
           "copyright_dates": "2022",
@@ -2528,7 +2548,7 @@ const RESOURCES_DATA = {
         "code": "zht",
         "name": "Chinese (Traditional)",
         "title": "Translation Notes (unfoldingWord)",
-        "version": "1.0.0",
+        "version": "1.0.1",
         "resource_type": "Translation Guide",
         "content_type": "Html",
         "language": "zht",
@@ -2541,8 +2561,8 @@ const RESOURCES_DATA = {
         },
         "has_json": true,
         "has_md": true,
-        "has_pdf": false,
-        "has_docx": false
+        "has_pdf": true,
+        "has_docx": true
       }
     },
     "title": "Translation Notes (unfoldingWord)"
@@ -2556,7 +2576,7 @@ const RESOURCES_DATA = {
         "code": "arb",
         "name": "Arabic",
         "title": "Translation Questions (unfoldingWord)",
-        "version": "1.0.0",
+        "version": "1.0.1",
         "resource_type": "Comprehension Testing",
         "content_type": "Html",
         "language": "arb",
@@ -2569,14 +2589,14 @@ const RESOURCES_DATA = {
         },
         "has_json": true,
         "has_md": true,
-        "has_pdf": false,
-        "has_docx": false
+        "has_pdf": true,
+        "has_docx": true
       },
       "eng": {
         "code": "eng",
         "name": "English",
         "title": "Translation Questions (unfoldingWord)",
-        "version": "1.0.0",
+        "version": "1.0.1",
         "resource_type": "Comprehension Testing",
         "content_type": "Html",
         "language": "eng",
@@ -2596,7 +2616,7 @@ const RESOURCES_DATA = {
         "code": "fra",
         "name": "French",
         "title": "Translation Questions (unfoldingWord)",
-        "version": "1.0.0",
+        "version": "1.0.1",
         "resource_type": "Comprehension Testing",
         "content_type": "Html",
         "language": "fra",
@@ -2616,7 +2636,7 @@ const RESOURCES_DATA = {
         "code": "hin",
         "name": "Hindi",
         "title": "Translation Questions (unfoldingWord)",
-        "version": "1.0.0",
+        "version": "1.0.1",
         "resource_type": "Comprehension Testing",
         "content_type": "Html",
         "language": "hin",
@@ -2636,7 +2656,7 @@ const RESOURCES_DATA = {
         "code": "ind",
         "name": "Indonesian",
         "title": "Translation Questions (unfoldingWord)",
-        "version": "1.0.0",
+        "version": "1.0.1",
         "resource_type": "Comprehension Testing",
         "content_type": "Html",
         "language": "ind",
@@ -2656,7 +2676,7 @@ const RESOURCES_DATA = {
         "code": "nep",
         "name": "Nepali",
         "title": "Translation Questions (unfoldingWord)",
-        "version": "1.0.0",
+        "version": "1.0.1",
         "resource_type": "Comprehension Testing",
         "content_type": "Html",
         "language": "nep",
@@ -2676,7 +2696,7 @@ const RESOURCES_DATA = {
         "code": "por",
         "name": "Portuguese",
         "title": "Translation Questions (unfoldingWord)",
-        "version": "1.0.0",
+        "version": "1.0.1",
         "resource_type": "Comprehension Testing",
         "content_type": "Html",
         "language": "por",
@@ -2696,7 +2716,7 @@ const RESOURCES_DATA = {
         "code": "zht",
         "name": "Chinese (Traditional)",
         "title": "Translation Questions (unfoldingWord)",
-        "version": "1.0.0",
+        "version": "1.0.1",
         "resource_type": "Comprehension Testing",
         "content_type": "Html",
         "language": "zht",
@@ -2737,8 +2757,8 @@ const RESOURCES_DATA = {
         },
         "has_json": true,
         "has_md": true,
-        "has_pdf": false,
-        "has_docx": false
+        "has_pdf": true,
+        "has_docx": true
       },
       "eng": {
         "code": "eng",
