--- a/catalog.html
+++ b/catalog.html
@@ -11,7 +11,7 @@
         <div class="container header-content">
             <div>
                 <h1>Unified Catalog</h1>
-                <p class="subtitle">Browse Aquifer Bible Resources by Type and Language</p>
+                <p class="subtitle">Browse Aquifer Bible Resources by Resource and Language</p>
             </div>
             <nav class="header-nav">
                 <a href="index.html" class="catalog-link">Home</a>
