Update resource JSON path and file checks
Modified get_first_json_path in build_site.py to prefer paths containing 'json' for JSON files.

--- a/catalog.html
+++ b/catalog.html
@@ -4728,7 +4728,7 @@ const RESOURCES_DATA = {
         "resource_type": "Bible",
         "content_type": "Bible",
         "language": "eng",
-        "first_json_path": "audio/01GENBSB.timing.json",
+        "first_json_path": "json/01.content.json",
         "citation": {
           "title": "Berean Standard Bible",
           "copyright_dates": null,
@@ -4736,10 +4736,10 @@ const RESOURCES_DATA = {
           "license_name": "Public Domain CC0",
           "adaptation_notice": ""
         },
-        "has_json": false,
+        "has_json": true,
         "has_md": false,
-        "has_pdf": false,
-        "has_docx": false,
+        "has_pdf": true,
+        "has_docx": true,
         "has_usx": true,
         "has_usfm": true,
         "has_audio": true
