--- a/catalog.html
+++ b/catalog.html
@@ -4760,7 +4760,7 @@ const RESOURCES_DATA = {
         "resource_type": "Bible",
         "content_type": "Bible",
         "language": "eng",
-        "first_json_path": null,
+        "first_json_path": "json/01.content.json",
         "citation": {
           "title": "unfoldingWord\u00ae Literal Text",
           "copyright_dates": "2022",
@@ -4768,10 +4768,10 @@ const RESOURCES_DATA = {
           "license_name": "CC BY-SA 4.0 license",
           "adaptation_notice": ""
         },
-        "has_json": false,
-        "has_md": false,
-        "has_pdf": false,
-        "has_docx": false,
+        "has_json": true,
+        "has_md": true,
+        "has_pdf": true,
+        "has_docx": true,
         "has_usx": true,
         "has_usfm": true,
         "has_audio": false
@@ -4788,11 +4788,11 @@ const RESOURCES_DATA = {
         "code": "swh",
         "name": "Swahili",
         "title": "Open Kiswahili Contemporary Version",
-        "version": "1.0.1",
+        "version": "1.0.2",
         "resource_type": "Bible",
         "content_type": "Bible",
         "language": "swh",
-        "first_json_path": "audio/01GENOKCV.timing.json",
+        "first_json_path": "json/01.content.json",
         "citation": {
           "title": "Open Kiswahili Contemporary Version",
           "copyright_dates": "2015",
@@ -4800,10 +4800,10 @@ const RESOURCES_DATA = {
           "license_name": "CC BY-SA 4.0 license",
           "adaptation_notice": ""
         },
-        "has_json": false,
-        "has_md": false,
-        "has_pdf": false,
-        "has_docx": false,
+        "has_json": true,
+        "has_md": true,
+        "has_pdf": true,
+        "has_docx": true,
         "has_usx": true,
         "has_usfm": true,
         "has_audio": true
@@ -4824,7 +4824,7 @@ const RESOURCES_DATA = {
         "resource_type": "Bible",
         "content_type": "Bible",
         "language": "hin",
-        "first_json_path": "audio/01GENIRV.timing.json",
+        "first_json_path": "json/01.content.json",
         "citation": {
           "title": "Hindi Indian Revised Version",
           "copyright_dates": "2019",
@@ -4832,10 +4832,10 @@ const RESOURCES_DATA = {
           "license_name": "CC BY-SA 4.0 license",
           "adaptation_notice": ""
         },
-        "has_json": false,
-        "has_md": false,
-        "has_pdf": false,
-        "has_docx": false,
+        "has_json": true,
+        "has_md": true,
+        "has_pdf": true,
+        "has_docx": true,
         "has_usx": true,
         "has_usfm": true,
         "has_audio": true
