--- a/catalog.html
+++ b/catalog.html
@@ -67,12 +67,12 @@
                         <option value="ReinaValera1909">Reina Valera 1909</option>
                         <option value="RussianSynodalBible">Russian Synodal Bible</option>
                         <option value="TerjemahanBaruIndonesia">Terjemahan Baru Indonesia</option>
-                        <option value="UWTranslationWords">Translation Words (unfoldingWord)</option>
                         <option value="unfoldingWordLiteral">unfoldingWord Literal</option>
                         <option value="unfoldingWordSimplified">unfoldingWord Simplified</option>
                         <option value="UWTranslationManual">unfoldingWord® Translation Academy</option>
                         <option value="UWTranslationNotes">unfoldingWord® Translation Notes</option>
                         <option value="UWTranslationQuestions">unfoldingWord® Translation Questions</option>
+                        <option value="UWTranslationWords">unfoldingWord® Translation Words</option>
                         <option value="VideoBibleDictionary">Videos (Video Bible Dictionary)</option>
                         <option value="WorldEnglishBible">World English Bible</option>
                         <option value="WorldEnglishBibleUpdated">World English Bible Updated</option>
@@ -3309,7 +3309,7 @@ const RESOURCES_DATA = {
           "copyright_dates": "2022",
           "copyright_holder": "unfoldingWord",
           "license_name": "CC BY-SA 4.0 license",
-          "adaptation_notice": ""
+          "adaptation_notice": "<p><b>unfoldingWord\u00ae Translation Words</b> \u00a9 2022 unfoldingWord. Released under CC BY-SA 4.0 license. <cite>unfoldingWord\u00ae Translation Words</cite> has been adapted in the following languages: Tok Pisin, Arabic (\u0639\u0631\u0628\u064a), French (Fran\u00e7ais), Hindi (\u0939\u093f\u0902\u0926\u0940), Indonesian (Bahasa Indonesia), Portuguese (Portugu\u00eas), Russian (\u0420\u0443\u0441\u0441\u043a\u0438\u0439), Spanish (Espa\u00f1ol), Swahili (Kiswahili), and Simplified Chinese (\u7b80\u4f53\u4e2d\u6587) from <cite>unfoldingWord\u00ae Translation Words</cite> \u00a9 2022 unfoldingWord. Released under CC BY-SA 4.0 license by Mission Mutual</p>"
         },
         "has_json": true,
         "has_md": true,
@@ -3322,7 +3322,7 @@ const RESOURCES_DATA = {
       "eng": {
         "code": "eng",
         "name": "English",
-        "title": "Translation Words (unfoldingWord)",
+        "title": "unfoldingWord\u00ae Translation Words",
         "version": "1.0.1",
         "resource_type": "Translation Glossary",
         "content_type": "Html",
@@ -3333,7 +3333,7 @@ const RESOURCES_DATA = {
           "copyright_dates": "2022",
           "copyright_holder": "unfoldingWord",
           "license_name": "CC BY-SA 4.0 license",
-          "adaptation_notice": ""
+          "adaptation_notice": "<p><b>unfoldingWord\u00ae Translation Words</b> \u00a9 2022 unfoldingWord. Released under CC BY-SA 4.0 license. <cite>unfoldingWord\u00ae Translation Words</cite> has been adapted in the following languages: Tok Pisin, Arabic (\u0639\u0631\u0628\u064a), French (Fran\u00e7ais), Hindi (\u0939\u093f\u0902\u0926\u0940), Indonesian (Bahasa Indonesia), Portuguese (Portugu\u00eas), Russian (\u0420\u0443\u0441\u0441\u043a\u0438\u0439), Spanish (Espa\u00f1ol), Swahili (Kiswahili), and Simplified Chinese (\u7b80\u4f53\u4e2d\u6587) from <cite>unfoldingWord\u00ae Translation Words</cite> \u00a9 2022 unfoldingWord. Released under CC BY-SA 4.0 license by Mission Mutual</p>"
         },
         "has_json": true,
         "has_md": true,
@@ -3357,7 +3357,7 @@ const RESOURCES_DATA = {
           "copyright_dates": "2022",
           "copyright_holder": "unfoldingWord",
           "license_name": "CC BY-SA 4.0 license",
-          "adaptation_notice": ""
+          "adaptation_notice": "<p><b>unfoldingWord\u00ae Translation Words</b> \u00a9 2022 unfoldingWord. Released under CC BY-SA 4.0 license. <cite>unfoldingWord\u00ae Translation Words</cite> has been adapted in the following languages: Tok Pisin, Arabic (\u0639\u0631\u0628\u064a), French (Fran\u00e7ais), Hindi (\u0939\u093f\u0902\u0926\u0940), Indonesian (Bahasa Indonesia), Portuguese (Portugu\u00eas), Russian (\u0420\u0443\u0441\u0441\u043a\u0438\u0439), Spanish (Espa\u00f1ol), Swahili (Kiswahili), and Simplified Chinese (\u7b80\u4f53\u4e2d\u6587) from <cite>unfoldingWord\u00ae Translation Words</cite> \u00a9 2022 unfoldingWord. Released under CC BY-SA 4.0 license by Mission Mutual</p>"
         },
         "has_json": true,
         "has_md": true,
@@ -3381,7 +3381,7 @@ const RESOURCES_DATA = {
           "copyright_dates": "2022",
           "copyright_holder": "unfoldingWord",
           "license_name": "CC BY-SA 4.0 license",
-          "adaptation_notice": ""
+          "adaptation_notice": "<p><b>unfoldingWord\u00ae Translation Words</b> \u00a9 2022 unfoldingWord. Released under CC BY-SA 4.0 license. <cite>unfoldingWord\u00ae Translation Words</cite> has been adapted in the following languages: Tok Pisin, Arabic (\u0639\u0631\u0628\u064a), French (Fran\u00e7ais), Hindi (\u0939\u093f\u0902\u0926\u0940), Indonesian (Bahasa Indonesia), Portuguese (Portugu\u00eas), Russian (\u0420\u0443\u0441\u0441\u043a\u0438\u0439), Spanish (Espa\u00f1ol), Swahili (Kiswahili), and Simplified Chinese (\u7b80\u4f53\u4e2d\u6587) from <cite>unfoldingWord\u00ae Translation Words</cite> \u00a9 2022 unfoldingWord. Released under CC BY-SA 4.0 license by Mission Mutual</p>"
         },
         "has_json": true,
         "has_md": true,
@@ -3405,7 +3405,7 @@ const RESOURCES_DATA = {
           "copyright_dates": "2022",
           "copyright_holder": "unfoldingWord",
           "license_name": "CC BY-SA 4.0 license",
-          "adaptation_notice": ""
+          "adaptation_notice": "<p><b>unfoldingWord\u00ae Translation Words</b> \u00a9 2022 unfoldingWord. Released under CC BY-SA 4.0 license. <cite>unfoldingWord\u00ae Translation Words</cite> has been adapted in the following languages: Tok Pisin, Arabic (\u0639\u0631\u0628\u064a), French (Fran\u00e7ais), Hindi (\u0939\u093f\u0902\u0926\u0940), Indonesian (Bahasa Indonesia), Portuguese (Portugu\u00eas), Russian (\u0420\u0443\u0441\u0441\u043a\u0438\u0439), Spanish (Espa\u00f1ol), Swahili (Kiswahili), and Simplified Chinese (\u7b80\u4f53\u4e2d\u6587) from <cite>unfoldingWord\u00ae Translation Words</cite> \u00a9 2022 unfoldingWord. Released under CC BY-SA 4.0 license by Mission Mutual</p>"
         },
         "has_json": true,
         "has_md": true,
@@ -3429,7 +3429,7 @@ const RESOURCES_DATA = {
           "copyright_dates": "2022",
           "copyright_holder": "unfoldingWord",
           "license_name": "CC BY-SA 4.0 license",
-          "adaptation_notice": ""
+          "adaptation_notice": "<p><b>unfoldingWord\u00ae Translation Words</b> \u00a9 2022 unfoldingWord. Released under CC BY-SA 4.0 license. <cite>unfoldingWord\u00ae Translation Words</cite> has been adapted in the following languages: Tok Pisin, Arabic (\u0639\u0631\u0628\u064a), French (Fran\u00e7ais), Hindi (\u0939\u093f\u0902\u0926\u0940), Indonesian (Bahasa Indonesia), Portuguese (Portugu\u00eas), Russian (\u0420\u0443\u0441\u0441\u043a\u0438\u0439), Spanish (Espa\u00f1ol), Swahili (Kiswahili), and Simplified Chinese (\u7b80\u4f53\u4e2d\u6587) from <cite>unfoldingWord\u00ae Translation Words</cite> \u00a9 2022 unfoldingWord. Released under CC BY-SA 4.0 license by Mission Mutual</p>"
         },
         "has_json": true,
         "has_md": true,
@@ -3453,7 +3453,7 @@ const RESOURCES_DATA = {
           "copyright_dates": "2022",
           "copyright_holder": "unfoldingWord",
           "license_name": "CC BY-SA 4.0 license",
-          "adaptation_notice": ""
+          "adaptation_notice": "<p><b>unfoldingWord\u00ae Translation Words</b> \u00a9 2022 unfoldingWord. Released under CC BY-SA 4.0 license. <cite>unfoldingWord\u00ae Translation Words</cite> has been adapted in the following languages: Tok Pisin, Arabic (\u0639\u0631\u0628\u064a), French (Fran\u00e7ais), Hindi (\u0939\u093f\u0902\u0926\u0940), Indonesian (Bahasa Indonesia), Portuguese (Portugu\u00eas), Russian (\u0420\u0443\u0441\u0441\u043a\u0438\u0439), Spanish (Espa\u00f1ol), Swahili (Kiswahili), and Simplified Chinese (\u7b80\u4f53\u4e2d\u6587) from <cite>unfoldingWord\u00ae Translation Words</cite> \u00a9 2022 unfoldingWord. Released under CC BY-SA 4.0 license by Mission Mutual</p>"
         },
         "has_json": true,
         "has_md": true,
@@ -3477,7 +3477,7 @@ const RESOURCES_DATA = {
           "copyright_dates": "2022",
           "copyright_holder": "unfoldingWord",
           "license_name": "CC BY-SA 4.0 license",
-          "adaptation_notice": ""
+          "adaptation_notice": "<p><b>unfoldingWord\u00ae Translation Words</b> \u00a9 2022 unfoldingWord. Released under CC BY-SA 4.0 license. <cite>unfoldingWord\u00ae Translation Words</cite> has been adapted in the following languages: Tok Pisin, Arabic (\u0639\u0631\u0628\u064a), French (Fran\u00e7ais), Hindi (\u0939\u093f\u0902\u0926\u0940), Indonesian (Bahasa Indonesia), Portuguese (Portugu\u00eas), Russian (\u0420\u0443\u0441\u0441\u043a\u0438\u0439), Spanish (Espa\u00f1ol), Swahili (Kiswahili), and Simplified Chinese (\u7b80\u4f53\u4e2d\u6587) from <cite>unfoldingWord\u00ae Translation Words</cite> \u00a9 2022 unfoldingWord. Released under CC BY-SA 4.0 license by Mission Mutual</p>"
         },
         "has_json": true,
         "has_md": true,
@@ -3488,7 +3488,7 @@ const RESOURCES_DATA = {
         "has_audio": false
       }
     },
-    "title": "Translation Words (unfoldingWord)"
+    "title": "unfoldingWord\u00ae Translation Words"
   },
   "UBSImages": {
     "name": "UBSImages",
