--- a/catalog.html
+++ b/catalog.html
@@ -5493,7 +5493,7 @@ const RESOURCES_DATA = {
         "code": "ind",
         "name": "Indonesian",
         "title": "Terjemahan Baru Indonesia",
-        "version": "1.0.2",
+        "version": "1.1.0",
         "resource_type": "Bible",
         "content_type": "Bible",
         "language": "ind",
@@ -5512,7 +5512,7 @@ const RESOURCES_DATA = {
         "has_usx": true,
         "has_usfm": true,
         "has_audio": false,
-        "has_alignments": false
+        "has_alignments": true
       }
     },
     "title": "Terjemahan Baru Indonesia"
