--- a/catalog.html
+++ b/catalog.html
@@ -5031,7 +5031,7 @@ const RESOURCES_DATA = {
         "code": "hin",
         "name": "Hindi",
         "title": "Indian Revised Version",
-        "version": "1.0.2",
+        "version": "1.1.0",
         "resource_type": "Bible",
         "content_type": "Bible",
         "language": "hin",
@@ -5050,7 +5050,7 @@ const RESOURCES_DATA = {
         "has_usx": true,
         "has_usfm": true,
         "has_audio": true,
-        "has_alignments": false
+        "has_alignments": true
       }
     },
     "title": "Indian Revised Version"
@@ -5196,7 +5196,7 @@ const RESOURCES_DATA = {
         "code": "hin",
         "name": "Hindi",
         "title": "Gateway Literal Text (Hindi)",
-        "version": "1.0.2",
+        "version": "1.1.0",
         "resource_type": "Bible",
         "content_type": "Bible",
         "language": "hin",
@@ -5215,7 +5215,7 @@ const RESOURCES_DATA = {
         "has_usx": true,
         "has_usfm": true,
         "has_audio": false,
-        "has_alignments": false
+        "has_alignments": true
       }
     },
     "title": "Gateway Literal Text (Hindi)"
