--- a/catalog.html
+++ b/catalog.html
@@ -1697,7 +1697,7 @@ const RESOURCES_DATA = {
           "copyright_dates": "2023",
           "copyright_holder": "Biblica Inc.",
           "license_name": "CC BY-SA 4.0 license",
-          "adaptation_notice": ""
+          "adaptation_notice": "<p><b>Biblica Study Notes</b> \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license. <cite>Biblica Study Notes</cite> has been adapted in the following languages: Tok Pisin, Arabic (\u0639\u0631\u0628\u064a), French (Fran\u00e7ais), Hindi (\u0939\u093f\u0902\u0926\u0940), Indonesian (Bahasa Indonesia), Portuguese (Portugu\u00eas), Russian (\u0420\u0443\u0441\u0441\u043a\u0438\u0439), Spanish (Espa\u00f1ol), Swahili (Kiswahili), and Simplified Chinese (\u7b80\u4f53\u4e2d\u6587)from Biblica Study Notes \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license by Mission Mutual</p>"
         },
         "has_json": true,
         "has_md": true,
@@ -1722,7 +1722,7 @@ const RESOURCES_DATA = {
           "copyright_dates": "2023",
           "copyright_holder": "Biblica Inc.",
           "license_name": "CC BY-SA 4.0 license",
-          "adaptation_notice": ""
+          "adaptation_notice": "<p><b>Biblica Study Notes</b> \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license. <cite>Biblica Study Notes</cite> has been adapted in the following languages: Tok Pisin, Arabic (\u0639\u0631\u0628\u064a), French (Fran\u00e7ais), Hindi (\u0939\u093f\u0902\u0926\u0940), Indonesian (Bahasa Indonesia), Portuguese (Portugu\u00eas), Russian (\u0420\u0443\u0441\u0441\u043a\u0438\u0439), Spanish (Espa\u00f1ol), Swahili (Kiswahili), and Simplified Chinese (\u7b80\u4f53\u4e2d\u6587)from Biblica Study Notes \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license by Mission Mutual</p>"
         },
         "has_json": true,
         "has_md": true,
@@ -1747,7 +1747,7 @@ const RESOURCES_DATA = {
           "copyright_dates": "2023",
           "copyright_holder": "Biblica Inc.",
           "license_name": "CC BY-SA 4.0 license",
-          "adaptation_notice": ""
+          "adaptation_notice": "<p><b>Biblica Study Notes</b> \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license. <cite>Biblica Study Notes</cite> has been adapted in the following languages: Tok Pisin, Arabic (\u0639\u0631\u0628\u064a), French (Fran\u00e7ais), Hindi (\u0939\u093f\u0902\u0926\u0940), Indonesian (Bahasa Indonesia), Portuguese (Portugu\u00eas), Russian (\u0420\u0443\u0441\u0441\u043a\u0438\u0439), Spanish (Espa\u00f1ol), Swahili (Kiswahili), and Simplified Chinese (\u7b80\u4f53\u4e2d\u6587)from Biblica Study Notes \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license by Mission Mutual</p>"
         },
         "has_json": true,
         "has_md": true,
@@ -1772,7 +1772,7 @@ const RESOURCES_DATA = {
           "copyright_dates": "2023",
           "copyright_holder": "Biblica Inc.",
           "license_name": "CC BY-SA 4.0 license",
-          "adaptation_notice": ""
+          "adaptation_notice": "<p><b>Biblica Study Notes</b> \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license. <cite>Biblica Study Notes</cite> has been adapted in the following languages: Tok Pisin, Arabic (\u0639\u0631\u0628\u064a), French (Fran\u00e7ais), Hindi (\u0939\u093f\u0902\u0926\u0940), Indonesian (Bahasa Indonesia), Portuguese (Portugu\u00eas), Russian (\u0420\u0443\u0441\u0441\u043a\u0438\u0439), Spanish (Espa\u00f1ol), Swahili (Kiswahili), and Simplified Chinese (\u7b80\u4f53\u4e2d\u6587)from Biblica Study Notes \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license by Mission Mutual</p>"
         },
         "has_json": true,
         "has_md": true,
@@ -1797,7 +1797,7 @@ const RESOURCES_DATA = {
           "copyright_dates": "2023",
           "copyright_holder": "Biblica Inc.",
           "license_name": "CC BY-SA 4.0 license",
-          "adaptation_notice": ""
+          "adaptation_notice": "<p><b>Biblica Study Notes</b> \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license. <cite>Biblica Study Notes</cite> has been adapted in the following languages: Tok Pisin, Arabic (\u0639\u0631\u0628\u064a), French (Fran\u00e7ais), Hindi (\u0939\u093f\u0902\u0926\u0940), Indonesian (Bahasa Indonesia), Portuguese (Portugu\u00eas), Russian (\u0420\u0443\u0441\u0441\u043a\u0438\u0439), Spanish (Espa\u00f1ol), Swahili (Kiswahili), and Simplified Chinese (\u7b80\u4f53\u4e2d\u6587)from Biblica Study Notes \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license by Mission Mutual</p>"
         },
         "has_json": true,
         "has_md": true,
@@ -1822,7 +1822,7 @@ const RESOURCES_DATA = {
           "copyright_dates": "2023",
           "copyright_holder": "Biblica Inc.",
           "license_name": "CC BY-SA 4.0 license",
-          "adaptation_notice": ""
+          "adaptation_notice": "<p><b>Biblica Study Notes</b> \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license. <cite>Biblica Study Notes</cite> has been adapted in the following languages: Tok Pisin, Arabic (\u0639\u0631\u0628\u064a), French (Fran\u00e7ais), Hindi (\u0939\u093f\u0902\u0926\u0940), Indonesian (Bahasa Indonesia), Portuguese (Portugu\u00eas), Russian (\u0420\u0443\u0441\u0441\u043a\u0438\u0439), Spanish (Espa\u00f1ol), Swahili (Kiswahili), and Simplified Chinese (\u7b80\u4f53\u4e2d\u6587)from Biblica Study Notes \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license by Mission Mutual</p>"
         },
         "has_json": true,
         "has_md": true,
@@ -1847,7 +1847,7 @@ const RESOURCES_DATA = {
           "copyright_dates": "2023",
           "copyright_holder": "Biblica Inc.",
           "license_name": "CC BY-SA 4.0 license",
-          "adaptation_notice": ""
+          "adaptation_notice": "<p><b>Biblica Study Notes</b> \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license. <cite>Biblica Study Notes</cite> has been adapted in the following languages: Tok Pisin, Arabic (\u0639\u0631\u0628\u064a), French (Fran\u00e7ais), Hindi (\u0939\u093f\u0902\u0926\u0940), Indonesian (Bahasa Indonesia), Portuguese (Portugu\u00eas), Russian (\u0420\u0443\u0441\u0441\u043a\u0438\u0439), Spanish (Espa\u00f1ol), Swahili (Kiswahili), and Simplified Chinese (\u7b80\u4f53\u4e2d\u6587)from Biblica Study Notes \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license by Mission Mutual</p>"
         },
         "has_json": true,
         "has_md": true,
@@ -1872,7 +1872,7 @@ const RESOURCES_DATA = {
           "copyright_dates": "2023",
           "copyright_holder": "Biblica Inc.",
           "license_name": "CC BY-SA 4.0 license",
-          "adaptation_notice": ""
+          "adaptation_notice": "<p><b>Biblica Study Notes</b> \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license. <cite>Biblica Study Notes</cite> has been adapted in the following languages: Tok Pisin, Arabic (\u0639\u0631\u0628\u064a), French (Fran\u00e7ais), Hindi (\u0939\u093f\u0902\u0926\u0940), Indonesian (Bahasa Indonesia), Portuguese (Portugu\u00eas), Russian (\u0420\u0443\u0441\u0441\u043a\u0438\u0439), Spanish (Espa\u00f1ol), Swahili (Kiswahili), and Simplified Chinese (\u7b80\u4f53\u4e2d\u6587)from Biblica Study Notes \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license by Mission Mutual</p>"
         },
         "has_json": true,
         "has_md": true,
@@ -1897,7 +1897,7 @@ const RESOURCES_DATA = {
           "copyright_dates": "2023",
           "copyright_holder": "Biblica Inc.",
           "license_name": "CC BY-SA 4.0 license",
-          "adaptation_notice": ""
+          "adaptation_notice": "<p><b>Biblica Study Notes</b> \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license. <cite>Biblica Study Notes</cite> has been adapted in the following languages: Tok Pisin, Arabic (\u0639\u0631\u0628\u064a), French (Fran\u00e7ais), Hindi (\u0939\u093f\u0902\u0926\u0940), Indonesian (Bahasa Indonesia), Portuguese (Portugu\u00eas), Russian (\u0420\u0443\u0441\u0441\u043a\u0438\u0439), Spanish (Espa\u00f1ol), Swahili (Kiswahili), and Simplified Chinese (\u7b80\u4f53\u4e2d\u6587)from Biblica Study Notes \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license by Mission Mutual</p>"
         },
         "has_json": true,
         "has_md": true,
@@ -1922,7 +1922,7 @@ const RESOURCES_DATA = {
           "copyright_dates": "2023",
           "copyright_holder": "Biblica Inc.",
           "license_name": "CC BY-SA 4.0 license",
-          "adaptation_notice": ""
+          "adaptation_notice": "<p><b>Biblica Study Notes</b> \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license. <cite>Biblica Study Notes</cite> has been adapted in the following languages: Tok Pisin, Arabic (\u0639\u0631\u0628\u064a), French (Fran\u00e7ais), Hindi (\u0939\u093f\u0902\u0926\u0940), Indonesian (Bahasa Indonesia), Portuguese (Portugu\u00eas), Russian (\u0420\u0443\u0441\u0441\u043a\u0438\u0439), Spanish (Espa\u00f1ol), Swahili (Kiswahili), and Simplified Chinese (\u7b80\u4f53\u4e2d\u6587)from Biblica Study Notes \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license by Mission Mutual</p>"
         },
         "has_json": true,
         "has_md": true,
@@ -1947,7 +1947,7 @@ const RESOURCES_DATA = {
           "copyright_dates": "2023",
           "copyright_holder": "Biblica Inc.",
           "license_name": "CC BY-SA 4.0 license",
-          "adaptation_notice": ""
+          "adaptation_notice": "<p><b>Biblica Study Notes</b> \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license. <cite>Biblica Study Notes</cite> has been adapted in the following languages: Tok Pisin, Arabic (\u0639\u0631\u0628\u064a), French (Fran\u00e7ais), Hindi (\u0939\u093f\u0902\u0926\u0940), Indonesian (Bahasa Indonesia), Portuguese (Portugu\u00eas), Russian (\u0420\u0443\u0441\u0441\u043a\u0438\u0439), Spanish (Espa\u00f1ol), Swahili (Kiswahili), and Simplified Chinese (\u7b80\u4f53\u4e2d\u6587)from Biblica Study Notes \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license by Mission Mutual</p>"
         },
         "has_json": true,
         "has_md": true,
@@ -1972,7 +1972,7 @@ const RESOURCES_DATA = {
           "copyright_dates": "2023",
           "copyright_holder": "Biblica Inc.",
           "license_name": "CC BY-SA 4.0 license",
-          "adaptation_notice": ""
+          "adaptation_notice": "<p><b>Biblica Study Notes</b> \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license. <cite>Biblica Study Notes</cite> has been adapted in the following languages: Tok Pisin, Arabic (\u0639\u0631\u0628\u064a), French (Fran\u00e7ais), Hindi (\u0939\u093f\u0902\u0926\u0940), Indonesian (Bahasa Indonesia), Portuguese (Portugu\u00eas), Russian (\u0420\u0443\u0441\u0441\u043a\u0438\u0439), Spanish (Espa\u00f1ol), Swahili (Kiswahili), and Simplified Chinese (\u7b80\u4f53\u4e2d\u6587)from Biblica Study Notes \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license by Mission Mutual</p>"
         },
         "has_json": true,
         "has_md": true,
