--- a/catalog.html
+++ b/catalog.html
@@ -4965,7 +4965,7 @@ const RESOURCES_DATA = {
         "code": "eng",
         "name": "English",
         "title": "unfoldingWord Literal",
-        "version": "1.0.2",
+        "version": "1.1.0",
         "resource_type": "Bible",
         "content_type": "Bible",
         "language": "eng",
@@ -4984,7 +4984,7 @@ const RESOURCES_DATA = {
         "has_usx": true,
         "has_usfm": true,
         "has_audio": false,
-        "has_alignments": false
+        "has_alignments": true
       }
     },
     "title": "unfoldingWord Literal"
@@ -5427,7 +5427,7 @@ const RESOURCES_DATA = {
         "code": "spa",
         "name": "Spanish",
         "title": "Reina Valera 1909",
-        "version": "1.0.2",
+        "version": "1.1.0",
         "resource_type": "Bible",
         "content_type": "Bible",
         "language": "spa",
@@ -5446,7 +5446,7 @@ const RESOURCES_DATA = {
         "has_usx": true,
         "has_usfm": true,
         "has_audio": false,
-        "has_alignments": false
+        "has_alignments": true
       }
     },
     "title": "Reina Valera 1909"
