Support for several more alignments

--- a/catalog.html
+++ b/catalog.html
@@ -58,6 +58,7 @@
                         <option value="GatewaySimplifiedTextIndonesian">Gateway Simplified Text (Indonesian)</option>
                         <option value="UBSImages">Images (UBS)</option>
                         <option value="IndianRevisedVersion">Indian Revised Version</option>
+                        <option value="LouisSegond1910">Louis Segond 1910</option>
                         <option value="NepaliUnlockedLiteralBible">Nepali Unlocked Literal Bible</option>
                         <option value="UWOpenBibleStories">Open Bible Stories (unfoldingWord)</option>
                         <option value="OpenHindiContemporaryVersion">Open Hindi Contemporary Version</option>
@@ -5064,7 +5065,7 @@ const RESOURCES_DATA = {
         "code": "arb",
         "name": "Arabic",
         "title": "Arabic Van Dyck Bible",
-        "version": "1.0.2",
+        "version": "1.1.0",
         "resource_type": "Bible",
         "content_type": "Bible",
         "language": "arb",
@@ -5083,7 +5084,7 @@ const RESOURCES_DATA = {
         "has_usx": true,
         "has_usfm": true,
         "has_audio": false,
-        "has_alignments": false
+        "has_alignments": true
       }
     },
     "title": "Arabic Van Dyck Bible"
@@ -5130,7 +5131,7 @@ const RESOURCES_DATA = {
         "code": "arb",
         "name": "Arabic",
         "title": "Biblica Open New Arabic Version 2012",
-        "version": "1.0.2",
+        "version": "1.1.0",
         "resource_type": "Bible",
         "content_type": "Bible",
         "language": "arb",
@@ -5149,7 +5150,7 @@ const RESOURCES_DATA = {
         "has_usx": true,
         "has_usfm": true,
         "has_audio": true,
-        "has_alignments": false
+        "has_alignments": true
       }
     },
     "title": "Biblica Open New Arabic Version 2012"
@@ -5262,7 +5263,7 @@ const RESOURCES_DATA = {
         "code": "hin",
         "name": "Hindi",
         "title": "Gateway Simplified Text (Hindi)",
-        "version": "1.0.2",
+        "version": "1.1.0",
         "resource_type": "Bible",
         "content_type": "Bible",
         "language": "hin",
@@ -5281,7 +5282,7 @@ const RESOURCES_DATA = {
         "has_usx": true,
         "has_usfm": true,
         "has_audio": false,
-        "has_alignments": false
+        "has_alignments": true
       }
     },
     "title": "Gateway Simplified Text (Hindi)"
@@ -5460,7 +5461,7 @@ const RESOURCES_DATA = {
         "code": "rus",
         "name": "Russian",
         "title": "Russian Synodal Bible",
-        "version": "1.0.2",
+        "version": "1.1.0",
         "resource_type": "Bible",
         "content_type": "Bible",
         "language": "rus",
@@ -5479,7 +5480,7 @@ const RESOURCES_DATA = {
         "has_usx": true,
         "has_usfm": true,
         "has_audio": false,
-        "has_alignments": false
+        "has_alignments": true
       }
     },
     "title": "Russian Synodal Bible"
@@ -5526,7 +5527,7 @@ const RESOURCES_DATA = {
         "code": "eng",
         "name": "English",
         "title": "unfoldingWord Simplified",
-        "version": "1.0.2",
+        "version": "1.1.0",
         "resource_type": "Bible",
         "content_type": "Bible",
         "language": "eng",
@@ -5545,7 +5546,7 @@ const RESOURCES_DATA = {
         "has_usx": true,
         "has_usfm": true,
         "has_audio": false,
-        "has_alignments": false
+        "has_alignments": true
       }
     },
     "title": "unfoldingWord Simplified"
@@ -5615,6 +5616,39 @@ const RESOURCES_DATA = {
       }
     },
     "title": "World English Bible Updated"
+  },
+  "LouisSegond1910": {
+    "name": "LouisSegond1910",
+    "description": "Aquifer resource repository for LouisSegond1910, containing resource-level metadata, article-level metadata, and content files.",
+    "url": "https://github.com/BibleAquifer/LouisSegond1910",
+    "languages": {
+      "fra": {
+        "code": "fra",
+        "name": "French",
+        "title": "Louis Segond 1910",
+        "version": "1.1.0",
+        "resource_type": "Bible",
+        "content_type": "Bible",
+        "language": "fra",
+        "first_json_path": "json/01.content.json",
+        "citation": {
+          "title": "Louis Segond 1910",
+          "copyright_dates": null,
+          "copyright_holder": "Public Domain",
+          "license_name": "Public Domain CC0",
+          "adaptation_notice": ""
+        },
+        "has_json": true,
+        "has_md": true,
+        "has_pdf": true,
+        "has_docx": true,
+        "has_usx": true,
+        "has_usfm": true,
+        "has_audio": true,
+        "has_alignments": true
+      }
+    },
+    "title": "Louis Segond 1910"
   }
 };
 const ORG_NAME = 'BibleAquifer';
