--- a/catalog.html
+++ b/catalog.html
@@ -4999,7 +4999,7 @@ const RESOURCES_DATA = {
         "code": "swh",
         "name": "Swahili",
         "title": "Open Kiswahili Contemporary Version",
-        "version": "1.0.2",
+        "version": "1.1.0",
         "resource_type": "Bible",
         "content_type": "Bible",
         "language": "swh",
@@ -5018,7 +5018,7 @@ const RESOURCES_DATA = {
         "has_usx": true,
         "has_usfm": true,
         "has_audio": true,
-        "has_alignments": false
+        "has_alignments": true
       }
     },
     "title": "Open Kiswahili Contemporary Version"
